--- a/static/styles.css
+++ b/static/styles.css
@@ -1,76 +1,140 @@
-* {
-  box-sizing: border-box;
-  margin: 0%;
-  padding: 0%;
+body {
+  background-color: rgb(36, 0, 70);
 }
+
+
+header::before,
+form::before,
+main::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://c4.wallpaperflare.com/wallpaper/142/751/831/landscape-anime-digital-art-fantasy-art-wallpaper-preview.jpg');
+  background-size: cover;
+  filter: blur(8px); 
+  z-index: -1; 
+}
+
 
 header,
 form,
 main {
-  margin: auto;
-  width: 70%;
-  font-family: Helvetica;
-  padding: 1.1rem 1.2rem;
+  position: relative;
+}
+
+
+header,
+main,
+header > h1,
+header > p,
+input,
+select,
+.color-box,
+.color-box-value {
+  background-color: transparent; 
+}
+
+form .choose-file {
+  background-color: rgb(186, 170, 251);
+  color:#680cf3
+}
+header > p,
+input,
+select,
+form > h2,
+.color-box-value {
+  color: rgb(200, 183, 250); 
 }
 
 header > h1 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
+  color: rgb(200, 183, 250);
+  text-align: center;
+}
+header,
+form,
+main {
+  border-radius: 10px;
+  padding: 30px;
+  margin-bottom: 30px;
+  box-shadow: 0 10px 20px rgba(11, 105, 255, 0.2);
 }
 
-header > p {
-  color: gray;
-  font-size: 1.2rem;
+header {
+  background-size: cover;
 }
 
 form {
-  background-color: skyblue;
+  text-align: center;
 }
 
-input {
+input,
+select {
   margin: 10px 0;
-}
-
-input[type="submit"],
-input[type="file"] {
+  padding: 12px 20px;
   font-size: 1.2rem;
-}
-
-input:hover {
-  cursor: pointer;
+  border-radius: 6px;
+  border: 2px solid #ccc;
 }
 
 input[type="submit"] {
-  padding: 0.5rem 0.8rem;
-  border: 2px solid #003333;
-  background-color: #003333;
+  background-color: #af6bf9;
   color: white;
-  border-radius: 4px;
+  border: none;
+  border-radius: 6px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-main {
+input[type="submit"]:hover {
+  background-color: #c691ff;
+}
+
+select {
+  appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23000"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  background-size: 12px;
+  background-color: #680cf3;
+}
+
+select:focus {
+  outline:#9e65f3;
+  background-color: #764b9e;
+}
+
+select[name="colour_code"] {
+  color: rgb(220, 186, 250);
+}
+
+.main {
   padding: 0;
 }
 
 .pair {
-  width: 100%;
   display: flex;
-  margin: auto;
+  margin-bottom: 20px;
   align-items: center;
+  font-size: large;
+  color: #1b0cf3;
 }
-.pair > .color-box {
-  width: 50%;
-  height: 50px;
-  border: 1px solid black;
-  text-align: center;
-  padding: 1.1%;
-  margin: 0;
-}
+
+.pair > .color-box,
 .pair > .color-box-value {
-  width: 50%;
+  flex: 1;
   height: 50px;
-  border: 1px solid black;
+  border-radius: 6px;
+}
+
+.color-box {
+  background-color: #ffffff;
+}
+
+.color-box-value {
+  color: #f48efb;
   text-align: center;
-  padding: 1.1%;
-  margin: 0;
 }
